--- a/VOIPSimplek/VOIPSimplek.csproj
+++ b/VOIPSimplek/VOIPSimplek.csproj
@@ -49,13 +49,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="pjsipDll, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\IP phone\pjsipDll.dll</HintPath>
+    <Reference Include="pjsipDll">
+      <HintPath>..\..\..\..\sipeksdk-master\sipeksdk-master\pjsipdll\Lib\pjsipDll.dll</HintPath>
     </Reference>
-    <Reference Include="SipekSdk, Version=1.5.154.404, Culture=neutral, PublicKeyToken=6ba248cda2ce6a8c, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\IP phone\SipekSdk.dll</HintPath>
+    <Reference Include="SipekSdk">
+      <HintPath>..\..\..\..\sipeksdk-master\sipeksdk-master\SipekSdk\obj\Debug\SipekSdk.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -71,6 +69,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="XamlAnimatedGif, Version=1.1.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XamlAnimatedGif.1.1.10\lib\net45\XamlAnimatedGif.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -109,6 +110,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -118,6 +120,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Images\incoming-call.gif" />
     <Content Include="Sounds\congestion.wav" />
     <Content Include="Sounds\dial.wav" />
     <Content Include="Sounds\ring.wav" />
